static/css/style.css
html {
  background-color: #dac5b4;
}

body {
  text-rendering: optimizeLegibility;
  background: white;

  display: flex;
  justify-content: center;
  flex-direction: column;
  width: fit-content;

  /* Center the content */
  margin-left: auto;
  margin-right: auto;

  /* Our newsletter font */
  font-family: "Source Serif 4", serif;
}

.centered {
  margin-left: auto;
  margin-right: auto;
}

.top-nav {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  width: fit-content;
  background: white;
}

.nameplate-line-1 {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 20px 10px;
}

.nameplate-vertical-divider {
  border-left: thin solid black;
  margin: 0 30px;
}

.nameplate-horizontal-divider {
  border-top: thin solid black;
  margin: 10px 10px;
}

.tagline {
  font-size: 20px;
  text-align: center;
  margin: 0 0;
}

.borough-seal {
  height: 100px;
  width: auto;
}

.title-image {
  height: 100px;
  width: auto;
}

.vertical-divider {
  margin: 0 30px;
  border-left: thin solid black;
}

.top-menu {
  display: flex;
  flex-direction: row;
  margin-bottom: 10px;

  /* Center the menu items */
  margin-left: auto;
  margin-right: auto;
}


.top-menu a {
  color: black;
}

.content {
  margin: 20px;
}

.embedded-issue {
  display: block;
  width: 800px;
  min-height: 1200px;
}

